after a days work

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ samp_subaru_IA484_clean.fits
 snap_subaru_IA484_clean.fits
 psfex.xml
 subaru_IA484_OUT
+subaru_IB464_OUT
+subaru_IB464.ldac
+subaru_IB464_clean.ldac
