--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,5 @@ chi_subaru_IB464_clean.fits
 proto_subaru_IB464_clean.fits
 samp_subaru_IB464_clean.fits
 snap_subaru_IB464_clean.fits
-selection_IA484.png
+selection_subaru_IA484.png
+selection_subaru_IB464.png
