After new ldacs, cleaned and selected, ldacs on local hard drive

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,23 @@ samp_subaru_IB464_clean.fits
 snap_subaru_IB464_clean.fits
 selection_subaru_IA484.png
 selection_subaru_IB464.png
+subaru_IA484_OUT
+subaru_IA527_OUT
+subaru_IA624_OUT
+subaru_IA679_OUT
+subaru_IA738_OUT
+subaru_IA767_OUT
+subaru_IA484_clean.ldac
+subaru_IA527_clean.ldac
+subaru_IA624_clean.ldac
+subaru_IA679_clean.ldac
+subaru_IA738_clean.ldac
+subaru_IA767_clean.ldac
+subaru_IB427_OUT
+subaru_IB464_OUT
+subaru_IB505_OUT
+subaru_IB574_OUT
+subaru_IB709_OUT
+subaru_IB827_OUT
+subaru_NB711_OUT
+subaru_NB816_OUT
